--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,11 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-				<li><a href="/stuff">Stuff</a></li>
+	        		<li><a href="/">home</a></li>
+		        	<li><a href="/about">about</a></li>
+				<li><a href="/stuff">stuff</a></li>
 	        		<!-- <li><a href="/cv">CV</a></li> -->
-	        		<li><a href="/blog">Blog</a></li>
+	        		<li><a href="/blog">archive</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
