--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,10 @@
 	    		<ul>
 	        		<li><a href="/">home</a></li>
 		        	<li><a href="/about">about</a></li>
-				<li><a href="/stuff">stuff</a></li>
+					<li><a href="/yummy">input</a></li>
+					<li><a href="/blog">in progress</a></li>
+					<li><a href="/poop">output</a></li>
 	        		<!-- <li><a href="/cv">CV</a></li> -->
-	        		<li><a href="/blog">archive</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
