--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,8 @@ layout: default
 
   {{ content }}
 
+  <img src="kirby feet.jpg" alt="Dinosaur">
+
   {%- if site.posts.size > 0 -%}
     <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
