--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,9 +7,10 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
-  {{ content }}
-
   <img src="kirby feet.jpg" alt="Dinosaur">
+  <img src="sisters.jpeg" alt="Dinosaur"> 
+  
+  {{ content }}
 
   {%- if site.posts.size > 0 -%}
     <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
