--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 	        		<li><a href="/">home</a></li>
 		        	<li><a href="/about">about</a></li>
 					<li><a href="/yummy">input</a></li>
-					<li><a href="/blog">in progress</a></li>
+					<!---<li><a href="/blog">in progress</a></li>-->
 					<li><a href="/poop">output</a></li>
 	        		<!-- <li><a href="/cv">CV</a></li> -->
 	    		</ul>
