--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,36 +6,9 @@ layout: default
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
-
-  <img src="kirby feet.jpg" alt="Dinosaur">
   
-  <h2 class="post-list-heading">{{ page.list_title | default: "Welcome to my closet in the internet." }}</h2>
-  {{ content }}
-
-  {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
-
-    <p class="feed-subscribe">
-      <a href="{{ 'feed.xml' | relative_url }}">
-        <svg class="svg-icon orange"><use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg><span>Subscribe</span>
-      </a>
-    </p>
-  {%- endif -%}
+  <h2 class="post-list-heading">{{ page.list_title | default: "ahhhhh that's better. welcome to my closet in the internet!" }}</h2>
+  <img src="kirby feet with tea.png" alt="relaxing" style="width:1200px;height:300px;">
+  <ul>
 
 </div>
