--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,3 +12,8 @@ layout: default
   <br>
   <p style="font-size: 12px;text-align: right;">(...ahhhhh that's better) </p>
 </div>
+
+<p>tl;dr</p>
+<a href="../blog/video_speed_controller.html">How to improve your life in one easy step.</a>
+<br>
+<br>
