--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
   {%- endif -%}
   
   <h2 class="post-list-heading">{{ page.list_title | default: "welcome to my closet in the internet!" }}</h2>
-  <img src="../../documents/kirby feet with tea.png" alt="relaxing" style="width:1300px;height:300px;">
+  <img src="../../documents/kirby feet with tea.png" title="get comfortable" style="width:1300px;height:300px;">
   <br>
   <p style="font-size: 12px;text-align: right;">(...ahhhhh that's better) </p>
 </div>
