--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">home</a></li>
 		        	<li><a href="/about">about</a></li>
-					<li><a href="/yummy">input</a></li>
+					<li><a href="/eat">input</a></li>
 					<!---<li><a href="/blog">in progress</a></li>-->
 					<li><a href="/poop">output</a></li>
 	        		<!-- <li><a href="/cv">CV</a></li> -->
