--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,6 @@ layout: default
 </div>
 
 <p>tl;dr</p>
-<a href="../blog/video_speed_controller.html">How to improve your life in one easy step.</a>
+<a href="../eat/with_speed.html">How to improve your life in one easy step.</a>
 <br>
 <br>
