--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,13 +7,41 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
   
-  <h2 class="post-list-heading">{{ page.list_title | default: "welcome to my closet in the internet!" }}</h2>
+  <h2 class="post-list-heading">{{ page.list_title | default: "hello world!" }}</h2>
   <img src="../../documents/kirby feet with tea.png" title="get comfortable" style="width:1300px;height:300px;">
   <br>
   <p style="font-size: 12px;text-align: right;">(...ahhhhh that's better) </p>
 </div>
 
-<p>tl;dr</p>
-<a href="../eat/with_speed.html">How to improve your life in one easy step.</a>
-<br>
-<br>
+ <hr> 
+
+Since everything is connected*, this aims to be a tool for processing sparkly ideas into a surreptitously spectacular theory of everything. 
+
+<a href="../poop/writing.html" style="font-size: 8px">And I'm chronically mentally constipated</a>
+<br />
+<br />
+You can find some sparkly things in the "input" page.
+<br />
+<br />
+ <img src="../documents/sisters.jpeg" title="oooh sparkly" style="width:500px;height:300px;"> 
+<br />
+<hr />
+<p style="font-size:12px">
+*as referenced in:
+<br />
+1. <a href="http://itila.blogspot.com/">David Mackay's blog title</a>
+<br />
+2. "Creation", Steve Grand: 
+“the writer Douglas Adams, who has a tremendous feeling for such concepts, talks about the interconnectedness of all things” (32)
+<br />
+3. ...which is illustrated in <a href="../poop/gently.html">Douglas Adams' Dirk Gently's Holistic Detective Agency</a> 
+<br />
+4. Andrew Gelman's blog: <a href="https://statmodeling.stat.columbia.edu/2019/01/08/book-pearl-mackenzie/">"In the problems I’ve seen, everything is connected to everything else..."</a>
+<br />
+5. <a href="https://en.wikipedia.org/wiki/Consilience_(book)">Consilience", E.O. Wilson</a>
+</p>
+<br />
+
+
+<!---mt tamalpais; head in the clouds -->
+
