--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">home</a></li>
-		        	<li><a href="/about">about</a></li>
+		        	<!---<li><a href="/about">about</a></li>--->
 					<li><a href="/eat">input</a></li>
 					<!---<li><a href="/blog">in progress</a></li>-->
 					<li><a href="/poop">output</a></li>
