--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,40 +8,15 @@ layout: default
   {%- endif -%}
   
   <h2 class="post-list-heading">{{ page.list_title | default: "hello world!" }}</h2>
-  <img src="../../documents/kirby feet with tea.png" title="get comfortable" style="width:1300px;height:300px;">
+  <img src="../../documents/kirby feet with tea.png" title="get comfortable" style="width:800px;height:150px;">
   <br>
   <p style="font-size: 12px;text-align: right;">(...ahhhhh that's better) </p>
 </div>
 
  <hr> 
 
-Since everything is connected*, this aims to be a tool for processing sparkly ideas into a surreptitously spectacular theory of everything. 
+ {% for post in site.posts %}   
+    <h3><small></small>{{ post.date | date: "%Y %B %e - " }}</small><a href="{{ post.url }}">{{ post.title }}</a></h3>      
+{% endfor %}
 
-<a href="../poop/writing.html" style="font-size: 8px">And I'm chronically mentally constipated</a>
-<br />
-<br />
-You can find some sparkly things in the "input" page.
-<br />
-<br />
- <img src="../documents/sisters.jpeg" title="oooh sparkly" style="width:500px;height:300px;"> 
-<br />
-<hr />
-<p style="font-size:12px">
-*as referenced in:
-<br />
-1. <a href="http://itila.blogspot.com/">David Mackay's blog title</a>
-<br />
-2. "Creation", Steve Grand: 
-“the writer Douglas Adams, who has a tremendous feeling for such concepts, talks about the interconnectedness of all things” (32)
-<br />
-3. ...which is illustrated in <a href="../poop/gently.html">Douglas Adams' Dirk Gently's Holistic Detective Agency</a> 
-<br />
-4. Andrew Gelman's blog: <a href="https://statmodeling.stat.columbia.edu/2019/01/08/book-pearl-mackenzie/">"In the problems I’ve seen, everything is connected to everything else..."</a>
-<br />
-5. <a href="https://en.wikipedia.org/wiki/Consilience_(book)">Consilience", E.O. Wilson</a>
-</p>
-<br />
-
-
-<!---mt tamalpais; head in the clouds -->
 
