--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
  <hr> 
 
  {% for post in site.posts %}   
-    <h3><small></small>{{ post.date | date: "%Y %B %e - " }}</small><a href="{{ post.url }}">{{ post.title }}</a></h3>      
+    <h3>{{ post.date | date: "%Y %B %e - " }}<a href="{{ post.url }}">{{ post.title }}</a></h3>      
 {% endfor %}
 
 
