--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,15 @@ layout: default
 ---
 
 <h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<p><small><i>{{ page.date |  date: "%Y %B %e" }}</i></small></p>
 
 <div class="post">
+
   {{ content }}
 </div>
 
 <span>[
-  {% for tag in page.tags %}
+  {% for tag in post.tags %}
     {% capture tag_name %}{{ tag }}{% endcapture %}
     <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
   {% endfor %}
