--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,9 +8,9 @@ layout: default
   {%- endif -%}
   
   <h2 class="post-list-heading">{{ page.list_title | default: "hello world!" }}</h2>
-  <img src="../../documents/kirby feet with tea.png" title="get comfortable" style="width:800px;height:150px;">
+  <img src="../../documents/kirby feet with tea.png" title="let's have tea and waste time thinking about life, love, and discrepancies" style="width:800px;height:150px;">
   <br>
-  <p style="font-size: 12px;text-align: right;">(...ahhhhh that's better) </p>
+  <!---<p style="font-size: 12px;text-align: right;">(...ahhhhh that's better) </p>--->
 </div>
 
  <hr> 
