--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
-			{% if jekyll.environment == 'production' %}
+			<!--{% if jekyll.environment == 'production' %}-->
 			{% include analytics.html %}
-			{% endif %}
+			<!---{% endif %}--->
 		</head>
 		<body>
 			<nav>
