--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,9 @@ layout: default
  <hr> 
 
  {% for post in site.posts %}   
-    <h3>{{ post.date | date: "%Y %B %e - " }}<a href="{{ post.url }}">{{ post.title }}</a></h3>      
+  {% if post.hide != true %}
+    <h3>{{ post.date | date: "%Y %B %e - " }}<a href="{{ post.url }}">{{ post.title }}</a></h3>    
+  {% endif %}  
 {% endfor %}
 
 
